/cp 2018-02-19  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/84348
	* decl.c (grokdeclarator): Early return error_mark_node upon
	ill-formed friend declaration.

/testsuite
2018-02-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84348
	* g++.dg/cpp0x/auto50.C: New.
	* g++.dg/parse/friend12.C: Adjust.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257802 138bc75d-0d04-0410-961f-82ee72b054a4